unpackaged/main/default/objects/litify_pm__QuestionnaireAnswersSaved__e/litify_pm__QuestionnaireAnswersSaved__e.object-meta.xml
<CustomObject>
    <description>Emitted after a node of questionnaire answers have been saved</description>
    <label>Questionnaire Answers Saved</label>
    <pluralLabel>Questionnaire Answers Saved</pluralLabel>
</CustomObject>