unpackaged/main/default/objects/litify_pm__QuestionnaireAnswersSaved__e/fields/litify_pm__QuestionnaireOutputId__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__QuestionnaireOutputId__c</fullName>
    <label>QuestionnaireOutputId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>