unpackaged/main/default/objects/litify_pm__QuestionnaireAnswersSaved__e/fields/litify_pm__QuestionNodeId__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__QuestionNodeId__c</fullName>
    <label>QuestionNodeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>